scrollbar bugfix

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,11 @@
    margin: 0;
 }
 html, body{
+    
    overflow-x: hidden;
+   max-width: 100%; 
+   height: auto;
+  
 }
 body {
    position: relative
